# congestion-scraper

./: .gitignore  Cargo.toml  README.md
crates/hagnau/: Cargo.toml
crates/hagnau/src/: main.rs
crates/hagnau/src/sources/: adac.rs  mod.rs  radio7.rs
crates/hagnau/tools/plotter/: create_view.sql  main.py
crates/hagnau_model/: Cargo.toml
crates/hagnau_model/src/: main.rs
crates/hagnau_model/src/plotters_ext/: hourly.rs  mod.rs
crates/hagnau_sources/: Cargo.toml
crates/hagnau_sources/src/: adac.rs  lib.rs  radio7.rs
crates/hagnau_wasm/: Cargo.toml
crates/scraper/: Cargo.toml
crates/scraper/src/: congestion.rs  database.rs  lib.rs  scraper.rs  source.rs  view.rs
crates/scraper/src/model/: mod.rs  random_forest.rs
