[workspace]
members = ["crates/scraper", "crates/hagnau_sources", "crates/hagnau", "crates/hagnau_model", "crates/hagnau_wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
scraper = { path = "./crates/scraper" }
hagnau_sources = { path = "./crates/hagnau_sources" }
