[package]
name = "hagnau_model"
version.workspace = true
edition.workspace = true

[dependencies]
hagnau_sources.workspace = true
scraper.workspace = true

itertools = "0.15.0"

smartcore = { version = "0.5.0", features = ["serde"] }

chrono = "0.4.45"
plotters = "0.3.7"


postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
