[package]
name = "hagnau_wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
hagnau_sources.workspace = true
scraper.workspace = true

itertools = "0.15.0"

chrono = "0.4.45"

postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = "0.2.126"
